fix: Refine table layout on mobile viewport

--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -423,10 +423,26 @@
       @apply w-full overflow-x-auto;
 
       & tr {
-        @apply grid md:table-row;
-
-        & td {
+        & td,
+        & th {
           @apply p-2;
+
+          & p,
+          & span {
+            word-break: break-all;
+          }
+        }
+      }
+
+      &.limit-mobile-columns {
+        & tr {
+          & td,
+          & th {
+          }
+
+          &:nth-child(n + 2 of td, th) {
+            display: none;
+          }
         }
       }
     }
